--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/style.css" />
-    <title>Album 4</title>
+    <title>Album No.4</title>
   </head>
   <body>
     <div class="container">
