--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     
     
       <div class="container">
-        <div class="header"><a href="https://cartoontgimusic.github.io/homepage"><h2>Home</h2></a><h1 class="heading">တဒွီ</h1><h2>CartoonTgi</h2></div>
+        <h1 class="heading">တဒွီ</h1>
+        <div class="header"><a href="https://cartoontgimusic.github.io/homepage"><h2>Home</h2></a><h2>CartoonTgi</h2></div>
       <div class="music-container">
         <div id="cover-box">
           <img src="assets/images/cover1.jpg" alt="cover-image" id="cover" />
