--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" 
+     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
@@ -22,7 +18,7 @@
     
       <div class="container">
         <h1 class="heading">တဒွီ</h1>
-        <div class="header"><a href="https://cartoontgimusic.github.io/homepage"><h2>Home</h2></a><h2>CartoonTgi</h2></div>
+        <div class="header"><a href="https://cartoontgimusic.github.io/homepage"><h2>Home</h2></a></div>
       <div class="music-container">
         <div id="cover-box">
           <img src="assets/images/cover1.jpg" alt="cover-image" id="cover" />
@@ -41,9 +37,11 @@
             </div>
           </div>
           <div id="control-box">
-            <i id="prev" class="btn fas fa-backward"></i>
-            <i id="play" class="special-btn fas fa-play"></i>
-            <i id="next" class="btn fas fa-forward"></i>
+            <i id="random" class=" btn fas fa-shuffle"></i>
+            <i id="prev" class="btn fas fa-backward-step"></i>
+            <i id="play" class="special-btn fas fa-circle-play"></i>
+            <i id="next" class="btn fas fa-forward-step"></i>
+            <i id="repeat" class=" btn fas fa-rotate-left"></i>
           </div>
         </div>
       </div>
