--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="wrapper">
          <div class="title"><h2>တဒွီ</h2></div>
       <div class="home">
-          <div><a href="https://cartoontgimusic.github.io/homepage/">Home</a></div>
-          <div><a href="https://cartoontgimusic.github.io/homepage/">CartoonTgi</a></div>
+          <div><a href="https://cartoontgimusic.github.io/homepage/"><i class="fas fa-house"></i></a></div>
+          <div><a href="https://cartoontgimusic.github.io/homepage/"><i class="fas fa-list"></i></a></div>
       </div>
           
       
