--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="player">
       <div class="wrapper">
-         <div class="title"><h2>တဒွီ</h2></div>
-      <div class="home">
-          <div><a href="https://cartoontgimusic.github.io/homepage/"><i class="fas fa-house"></i></a></div>
-          <div><a href="https://cartoontgimusic.github.io/homepage/"><i class="fas fa-list"></i></a></div>
+          <div class="home">
+              <div><a href="https://cartoontgimusic.github.io/homepage/"><i class="fas fa-house"></i></a></div>
+              <div class="title"><h2>တဒွီ</h2></div>
+          <div><a href="musiclist.html"><i class="fas fa-bars"></i></a></div>
       </div>
           
       
