--- a/musiclist.html
+++ b/musiclist.html
@@ -269,69 +269,69 @@ padding-top: 10px;
 
   var listAudio = [
     {
-      name:"မဂ်လာႏဒျာႏဗွေႏဩ",
+      name:"အရက်ꩻသွတ်ꩻ",
       file:"assets/music/music1.mp3",
-      duration:"ကာတွန်းစွိုꩻ"
+      duration:"ခွန်ပဒဲကော"
     },
     {
-      name:"ဆုတောင်ꩻနော",
+      name:'မွိုးသောက',
       file:"assets/music/music2.mp3",
       duration:"ခွန်ချို"
     },
     {
-      name:"တဖြာꩻတွမ်ႏတဖြာꩻ",
-      file:"assets/music/music3.mp3",
-      duration:"ခွန်ခွန်ကျော်ဦ'"
-    },
-    {
-      name:"အောဝ်ႏကော့ꩻမွောင်ꩻ",
-      file:"assets/music/music4.mp3",
+      name:'ဆာႏပေႏ',
+      file:"assets/music/music1.mp3",
       duration:"ခွန်ပျူ"
     },
     {
-      name:"သေနာႏလဲဥ်း",
-      file:"assets/music/music5.mp3",
-      duration:"ခွန်ပဒဲကော"
-    },
-    {
-      name:"အောဝ်ႏ",
-      file:"assets/music/music6.mp3",
+      name:'နင်ႏလိင်ႏလဲဥ်',
+      file:"assets/music/music4.mp3",
       duration:"ခွန်ခွန်ကျော်ဦး"
     },
     {
-      name:"လဲဥ်ꩻထိုႏမွန်းခွေꩻ",
+      name:'ယူႏငါႏမွုန်းဒွုမ်',
+      file:"assets/music/music2.mp3",
+      duration:"ခွန်ချို"
+    },
+    {
+      name:'ဝါးပေꩻဗွါ',
+      file:"assets/music/music6.mp3",
+      duration:"ကာတွန်းစွိုꩻ"
+    },
+    {
+      name:'တဒွီ',
       file:"assets/music/music7.mp3",
-      duration:"ခွန်ကော်လီ"
+      duration:"ခွန်ခွန်ကျော်ဦး"
     },
     {
-      name:'တဥ်ႏခွေါင်ဒျာႏနော်',
+      name:'သꩻရာႏတꩻခါꩻ',
       file:"assets/music/music8.mp3",
-      duration:"ခွန်ဝဒုတ်"
+      duration:"ခွန်ပဒဲကော"
     },
     {
-      name:'အွဥ်ႏဖိင်ꩻခန်း ',
+      name:'သွꩻမူႏ',
       file:"assets/music/music9.mp3",
       duration:"ခွန်ချိူ"
     },
     {
-      name:'မွိုက်လွေꩻဟိုင်း',
+      name:'ဒေါ့ꩻနွောဝ်ꩻမွုန်းခွေꩻ',
       file:"assets/music/music10.mp3",
-      duration:"ခွန်ကျော်စိုး"
-    },
-    {
-      name:'ကမ်းဒျာႏနာꩻသꩻ',
-      file:"assets/music/music11.mp3",
       duration:"ခွန်ခွန်ကျော်ဦး"
     },
     {
-      name:'မဲ့ꩻခွေꩻလွဥ်ꩻယန်း',
-      file:"assets/music/music12.mp3",
+      name:'ယူႏလꩻခွင်ꩻ',
+      file:"assets/music/music11.mp3",
       duration:"ခွန်ပဒဲကော"
     },
     {
-      name:'နာꩻထန်ႏထိုꩻ',
+      name:'ဝေးမူႏ',
       file:"assets/music/music12.mp3",
-      duration:"ခွန်ဇော်ခက်"
+      duration:"ခွန်ပျူ"
+    },
+    {
+      name:'ဖေႏမွုန်းအသွုမ်ꩻ',
+      file:"assets/music/music12.mp3",
+      duration:"ကာတွန်းစွိုꩻ"
     },
     
   ]
