--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <div class="next-track" onclick="nextTrack()">
                   <i class="fa fa-step-forward fa-2x"></i>
               </div>
-              <div class="repeat-track" onclick="repeatTrack()">
+              <div class="repeat-track" onclick="loopTrack()">
                   <i class="fas fa-repeat fa-2x" title="repeat"></i>
               </div>
          </div>
